--- a/src/pages/Tab2.css
+++ b/src/pages/Tab2.css
@@ -1,6 +1,6 @@
 h1{
   text-align: center;
-  font-size:100px;
+  font-size:50px !important;
 }
 
 .list2{
@@ -9,4 +9,8 @@ h1{
   flex-direction: column;;
   justify-content:center;
   align-items: center;
+}
+
+.list-size{
+  width:50%;
 }
